# goit-pythonweb-hw-10

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
src/: __init__.py  config.py  database.py  models.py  schemas.py  settings.py
src/api/: __init__.py  auth.py  contacts.py  users.py
src/repository/: __init__.py  contacts.py  users.py
src/services/: auth.py  cloudinary_upload.py  email.py  passwords.py
src/services/templates/: verify_email.html
