[tool.poetry]
name = "contacts-api"
version = "0.1.0"
description = "REST API для контактів на FastAPI + SQLAlchemy + PostgreSQL"
authors = ["Student <student@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
pydantic = "^2.7.0"
greenlet = "^3.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

