[tool.poetry]
name = "contacts-api"
version = "0.1.0"
description = "REST API для контактів на FastAPI + SQLAlchemy + PostgreSQL"
authors = ["Student <student@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.4.0"
greenlet = "^3.0.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "3.2.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-mail = "^1.4.1"
slowapi = "^0.1.9"
cloudinary = "^1.41.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

